added dummy chapters

--- a/Master.tex
+++ b/Master.tex
@@ -5,15 +5,13 @@
 
 
 
-% Titelseite einfügen.
-\input{Titelseite/Titelseite}
+% Titelseite manuell einfügen.
 
 % Counter zurücksetzen. Römische Ziffern einstellen.
-\pagenumbering{Roman}
-\setcounter{page}{1}
+%\pagenumbering{Roman}
+%\setcounter{page}{1}
 
-% Selbständigkeitserklärung einfügen.
-\input{Erklaerung/Erklaerung}
+% Selbständigkeitserklärung manuell einfügen.
 
 % Abstract einfügen.
 \input{Abstract/Abstract}
@@ -27,11 +25,14 @@
 \setcounter{page}{1}
 
 % Kapitel einfügen.
+\input{Kapitel/Kapitel1.tex}
 \input{Kapitel/Kapitel2.tex}
 \input{Kapitel/Kapitel3.tex}
 \input{Kapitel/Kapitel4.tex}
 \input{Kapitel/Kapitel5.tex}
 \input{Kapitel/Kapitel6.tex}
+\input{Kapitel/Kapitel7.tex}
+\input{Kapitel/Kapitel8.tex}
 
 
 % Optimierung für Literaturverzeichnis
