--- a/Header/Header.tex
+++ b/Header/Header.tex
@@ -6,6 +6,7 @@
 \usepackage{graphicx, float}
 \usepackage{color}
 \usepackage{fancyvrb}
+\usepackage{pdfpages}
 
 % Page dimensions
 \usepackage[inner=3.5cm,outer=2.5cm,top=3.7cm,bottom=3.5cm]{geometry} % Settings for twoside documents.
