--- a/Erklaerung/Erklaerung.tex
+++ b/Erklaerung/Erklaerung.tex
@@ -1,9 +1,3 @@
-\chapter*{Selbstständigkeitserklärung}
-Hiermit erkläre ich, dass ich die Arbeit selbständig verfasst, noch nicht anderweitig für Prüfungszwecke vorgelegt, keine anderen als die angegebenen Quellen oder Hilfsmittel benützt, sowie wörtliche und sinngemäße Zitate als solche gekennzeichnet habe.
+\chapter*{Erklärung zur Genderung}
 
-\vspace{2cm}
 
-\begin{tabular}{@{}ll@{}}
-......................... &  .................................................. \\
-Datum                     &  Fabian Kloos
-\end{tabular}
