--- a/Kapitel/Kapitel1.tex
+++ b/Kapitel/Kapitel1.tex
@@ -1,3 +1,8 @@
 \chapter{Einleitung}
 
-asdf
+In unserem modernen Zeitalter schreitet die Technik immer weiter voran. In den letzten zwei Jahrzehnten ist im Bereich Computer und Technologie so viel erreicht worden, wie niemand für möglich gehalten hatte. Jedes Jahr treten wieder neue Technologien und Gadgets in das Leben der Menschen und die Einsatzmöglichkeiten und das Potenzial scheinen schier unendlich. Diese Neuerungen finden nicht nur im privaten Gebrauch großen Anklang, sondern bieten besonders Unternehmen viele Möglichkeiten sich weiterzuentwickeln, neue Produkte herzustellen und Kosten zu sparen. Wie in der Industrialisierung die Dampfmaschine, verhelfen heute technische Geräte und Computerchips den Unternehmen dabei, Arbeiten effizienter zu bewerkstelligen. Sie ermöglichen das Einbinden, sowie die Kontrolle und Optimierung neuer Prozesse. Teilweise fühlt es sich sogar an, als wären diese Computer bald schlauer als der Mensch und ersetzen ihn so bei der Arbeit. Im Vordergrund jedoch steht, dass diese Geräte die Arbeit unterstützen und so zum Wirtschaftswachstum beitragen. \\
+Große Unternehmen nutzen diese Neuerungen mehr zu ihrem Vorteil, als kleine oder mittlere Unternehmen (\textbf{KMU}) oder Handwerksbetriebe \cite{hateful_six_krcmar}. Durch ihre Flexibilität und weniger Bürokratie ist das Potential für Digitalisierung gegeben, allerdings wird dieses aufgrund der Risiken oft nicht genutzt. Handwerksbetriebe beispielsweise nutzen kaum technische Assistenzsystem und  setzen noch immer auf papierbasierte Anleitungen anstatt z.B. mit Tablets zu arbeiten \cite{zheng_eye-wearable_2015}. Diese wären aber für den Einsatz auf einer rauen Baustelle nicht geeignet. Für die Produktionsunterstützung oder in Werkstätten werden sie jedoch häufig genutzt. \\
+Neue Entwicklungen in der Augmented Reality (\textbf{AR}) mit Apparaten, die direkt am Körper getragen werden können \cite{zheng_eye-wearable_2015} sehen dafür vielversprechend aus. Datenbrillen, wie Google Glass oder die Microsoft HoloLens haben insofern hohes Potential, da Nutzer bei der Verwendung die Hände frei haben. Diese AR Brillen projizieren Hologramme in die reale Umgebung des Nutzers und lassen so Realität und virtuelle Welt verschmelzen. Dadurch können Nutzern Informationen eingeblendet werden, mit welchen sie per Gesten- oder Sprachsteuerung interagieren können. Da sie die Geräte auf dem Kopf tragen, bleiben ihre Hände frei um Aktionen, wie Reparaturen auszuführen. Besonders die Microsoft HoloLens überzeugt hier mit ihrem großen Speicher, was es ermöglicht komplexe Programme aufzuspielen und diese auch Offline und unterwegs zu nutzen.
+
+Die Ziele dieser Arbeit sind es, den \textit{momentanen Stand der Digitalisierung in KMUs und Handwerksbetrieben zu bestimmen}, eine \textit{Augmented Reality Applikation für Handwerker zu designen und zu implementieren} und den \textit{Mehrwert von AR Applikationen für das Handwerk zu bestimmen}. \\
+Anfangs wird erforscht, warum KMUs und Handwerksbetriebe wenig digitalisieren, ob AR von ihnen bereits verwendet wird oder sie darin überhaupt Potenzial sehen. Daraus soll hervorgehen, wo der Einsatz von AR gefragt ist. \\
