--- a/Kapitel/Kapitel3.tex
+++ b/Kapitel/Kapitel3.tex
@@ -143,7 +143,7 @@ Die gewonnenen Erkenntnisse müssen nun entsprechend Kommuniziert werden, um sie
 
 In wissenschaftlichen Publikationen kann die Struktur dieser Methode genutzt werden, um die Ausarbeitung zu strukturieren, wie beispielsweise empirische Forschung durch den empirischen Prozess (Problemdefinition, Literaturrecherche, Aufstellen der Hypothesen, Datensammlung, Analyse, Ergebnis und Fazit) strukturiert wird. Die Kommunikation der Ergebnisse erfordert Wissen darüber, wie Arbeiten in der entsprechenden Disziplin verfasst werden. 
 
-\section{Designen des Fragebogens}
+\section{Design des Fragebogens}
 
 Diese Arbeit zielt darauf ab, einen theoretischen, sowie einen praktischen Beitrag abzuleiten. Dazu wurden Anmerkungen der Testpersonen während und nach den Probandentests notiert. Diese Informationen können dazu genutzt werden, Ideen zu sammeln und die Applikation zu verbessern, allerdings lassen sie sich nicht gut vergleichen. Sie stellen den praktischen Beitrag dar. Für den theoretischen Teil benötigt man vergleichbare Werte und Größen. Dazu wurde ein Evaluationsbogen konzipiert, der folgende Fragen beantworten soll:
 
