--- a/Kapitel/Kapitel6.tex
+++ b/Kapitel/Kapitel6.tex
@@ -1,6 +1,7 @@
 \chapter{Design des Artefakts}
 
-In diesem Kapitel wird die Entwicklung der HoloLens Planner App zur Unterstützung von Fliesenlegers, welche für die Microsoft HoloLens entwickelt wird, beschrieben. Dabei wird nach der Methode für gestaltungsorientierte Forschung von Peffers (siehe Sektion \ref{sec:gestForsch}) vorgegangen. Die Probleme von Handwerkern, genauer Fliesenlegern, werden herausgearbeitet. Daraus werden Ziele für die zu entwickelnde Applikation abgeleitet. Diese Anwendung wird anschließend in einem iterativen Prozess über fünf Phasen entwickelt. Abschließend werden die Ergebnisse kommuniziert.
+In diesem Kapitel wird die Entwicklung der HoloLens Planner App zur Unterstützung von Fliesenlegers, welche für die Microsoft HoloLens entwickelt wird, beschrieben. Zum Entwickeln wurde Unity verwendet. Das Hololens Toolkit stellte benötigte Funktionalitäten zur Verfügung, welche beim Entwickeln für die Microsoft HoloLens essentiell sind.
+Es wird nach der Methode für gestaltungsorientierte Forschung von Peffers (siehe Sektion \ref{sec:gestForsch}) vorgegangen. Die Probleme von Handwerkern, genauer Fliesenlegern, werden herausgearbeitet. Daraus werden Ziele für die zu entwickelnde Applikation abgeleitet. Diese Anwendung wird anschließend in einem iterativen Prozess über fünf Phasen entwickelt. Abschließend werden die Ergebnisse kommuniziert.
 
 \section{Problemidentifikation und Motivation}
 
