--- a/Master.tex
+++ b/Master.tex
@@ -14,6 +14,9 @@
 % Abstract einfügen.
 \input{Abstract/Abstract}
 
+% Erklärung männliche Form
+\input{Erklaerung/Erklaerung.tex}
+
 % Inhaltsverzeichnis generieren.
 \tableofcontents
 
