--- a/Bibliothek/Bibliothek.bib
+++ b/Bibliothek/Bibliothek.bib
@@ -1,3 +1,22 @@
+@inproceedings{zheng_eye-wearable_2015,
+	address = {New York, NY, USA},
+	series = {{CHI} '15},
+	title = {Eye-{Wearable} {Technology} for {Machine} {Maintenance}: {Effects} of {Display} {Position} and {Hands}-free {Operation}},
+	isbn = {978-1-4503-3145-6},
+	shorttitle = {Eye-{Wearable} {Technology} for {Machine} {Maintenance}},
+	url = {http://doi.acm.org/10.1145/2702123.2702305},
+	doi = {10.1145/2702123.2702305},
+	abstract = {Exciting developments in eye-wearable technology and its potential industrial applications warrant a thorough understanding of its advantages and drawbacks through empirical evidence. We conducted an experiment to investigate what characteristics of eye-wearable technology impact user performance in machine maintenance, which included a representative set of car maintenance tasks involving Locate, Manipulate, and Compare actions. Participants were asked to follow instructions displayed on one of four technologies: a peripheral eye-wearable display, a central eye-wearable display, a tablet, or a paper manual. We found a significant effect of display position: the peripheral eye-wearable display resulted in longer completion time than the central display; but no effect for hands-free operation. The technology effects were also modulated by different Tasks and Action types. We discuss the human factors implications for designing more effective eye-wearable technology, including display position, issues of monocular display, and how the physical proximity of the technology affects users' reliance level.},
+	urldate = {2019-01-07},
+	booktitle = {Proceedings of the 33rd {Annual} {ACM} {Conference} on {Human} {Factors} in {Computing} {Systems}},
+	publisher = {ACM},
+	author = {Zheng, Xianjun Sam and Foucault, Cedric and Matos da Silva, Patrik and Dasari, Siddharth and Yang, Tao and Goose, Stuart},
+	year = {2015},
+	keywords = {action type, eye-wearable technology, machine maintenance, smartglasses, task guidance, wearable computing},
+	pages = {2125--2134},
+	file = {ACM Full Text PDF:C\:\\Users\\Fabian\\Zotero\\storage\\TZFQNSFW\\Zheng et al. - 2015 - Eye-Wearable Technology for Machine Maintenance E.pdf:application/pdf}
+}
+
 @misc{noauthor_neue_nodate,
 	title = {Neue {Studie} von {Bitkom} und {ZDH} zur {Digitalisierung} des {Handwerks}.},
 	url = {https://www.zdh.de/fachbereiche/wirtschaft-energie-umwelt/digitalisierung-im-handwerk/pressemitteilungen/neue-studie-von-bitkom-und-zdh-zur-digitalisierung-des-handwerks/},
