--- a/Bibliothek/Bibliothek.bib
+++ b/Bibliothek/Bibliothek.bib
@@ -17,6 +17,30 @@
 	file = {ACM Full Text PDF:C\:\\Users\\Fabian\\Zotero\\storage\\TZFQNSFW\\Zheng et al. - 2015 - Eye-Wearable Technology for Machine Maintenance E.pdf:application/pdf}
 }
 
+@article{lu_virtual_1999,
+	title = {Virtual and {Augmented} {Reality} {Technologies} for {Product} {Realization}},
+	volume = {48},
+	doi = {10.1016/S0007-8506(07)63229-6},
+	abstract = {Our society expects engineers to develop products that are affordable, functional and sustainable. Effective product realization methods and tools are the answers to these societal expectations. In this paper, a new type of CAE tools, called virtual and augmented reality technologies, is introduced, reviewed and examined to reveal their great potentials in product realization. Specific areas where these emerging technologies can make a big difference are highlighted to illustrate the possible new paradigms of product realization. Subjects that require continuing R\&D efforts to mature the technologies for real-world engineering applications are also identified. Both product development engineers and virtual reality researchers should find this paper valuable to guide their efforts in developing a common road map for joint explorations. It is anticipated that the results from these joint explorations will enable engineers to deliver new products to the society across the time, space and other boundaries with high efficiency and great ease in the future.},
+	journal = {CIRP Annals - Manufacturing Technology},
+	author = {Lu, S.C-Y and Shpitalni, Moshe and Gadh, Rajit},
+	month = dec,
+	year = {1999},
+	pages = {471--495}
+}
+
+@inproceedings{georgel_industrial_2007,
+	title = {An {Industrial} {Augmented} {Reality} {Solution} {For} {Discrepancy} {Check}},
+	doi = {10.1109/ISMAR.2007.4538834},
+	abstract = {Construction companies employ CAD software during the planning phase, but what is finally built often does not match the original plan. The procedure of validating the model is called "discrepancy check". The system proposed here allows the user to easily obtain an augmentation in order to find differences between the planned 3D model and the built items. The main difference to previous body of work in this field is the emphasis on usability and acceptance of the solution. While standard image-based solutions use markers or rely on a "perfect" 3D model to find the pose of the camera, our software uses anchor-plates. Anchor-Plates are rectangular structures installed on walls and ceiling in the majority of industrial edifices. We are using them as landmarks because they are the most reliable components often used as reference coordinates by constructors. Furthermore, for real industrial applications, they are the most suitable solutions in terms of general applicability. Unfortunately, they have not been designed with computer vision applications in mind. On the contrary, they are often made or painted in such way that they are not easily popping out. They are therefore difficult targets to segment and to track. This paper proposes a solution to extract and match them to their 3D counterparts. We created a software that uses the detected structures for pose estimation and image augmentation. The software has been successfully employed to find discrepancies in several rooms of two industrial plants.},
+	booktitle = {2007 6th {IEEE} and {ACM} {International} {Symposium} on {Mixed} and {Augmented} {Reality}},
+	author = {Georgel, P. and Schroeder, P. and Benhimane, S. and Hinterstoisser, S. and Appel, M. and Navab, N.},
+	month = nov,
+	year = {2007},
+	keywords = {augmented reality, CAD, anchor-plates, Application software, Augmented reality, CAD software, Cameras, computer vision, Computer vision, construction companies, construction industry, Construction industry, discrepancy check, H.5.1 [Multimedia Information Systems], H.5.2 [User Interfaces], I.4.6 [Segmentation], I.4.9 [Applications], Image segmentation, industrial augmented reality solution, Industrial plants, production engineering computing, Software standards, Target tracking, Usability},
+	pages = {111--115}
+}
+
 @misc{noauthor_neue_nodate,
 	title = {Neue {Studie} von {Bitkom} und {ZDH} zur {Digitalisierung} des {Handwerks}.},
 	url = {https://www.zdh.de/fachbereiche/wirtschaft-energie-umwelt/digitalisierung-im-handwerk/pressemitteilungen/neue-studie-von-bitkom-und-zdh-zur-digitalisierung-des-handwerks/},
