--- a/Kapitel/Kapitel1.tex
+++ b/Kapitel/Kapitel1.tex
@@ -6,3 +6,23 @@ Neue Entwicklungen in der Augmented Reality (\textbf{AR}) mit Apparaten, die dir
 
 Die Ziele dieser Arbeit sind es, den \textit{momentanen Stand der Digitalisierung in KMUs und Handwerksbetrieben zu bestimmen}, eine \textit{Augmented Reality Applikation für Handwerker zu designen und zu implementieren} und den \textit{Mehrwert von AR Applikationen für das Handwerk zu bestimmen}. \\
 Anfangs wird erforscht, warum KMUs und Handwerksbetriebe wenig digitalisieren, ob AR von ihnen bereits verwendet wird oder sie darin überhaupt Potenzial sehen. Daraus soll hervorgehen, wo der Einsatz von AR gefragt ist. \\
+Anschließend soll eine AR Applikation für die Microsoft HoloLens implementiert werden, unter Zuhilfenahme der gewonnenen Einsichten. Diese Applikation soll sich speziell für das Handwerk des Fliesenlegers eignen, jedoch auch für andere Handwerker interessant sein. Damit soll ein Szenario nachspielbar sein, welches alle Funktionalitäten voll ausschöpft. \\
+Dieses wird anschließend mit Handwerkern getestet. Diese Tests sollen Informationen liefern, ob die Applikation und AR generell im Handwerk Potential hat.
+
+Um den momentanen Stand der Digitalisierung zu bestimmen wird zuerst eine Literaturrecherche durchgeführt. Dafür werden verschiedene renommierte Papers und Bücher analysiert. Anschließend soll mehr Bezug zur Realität aufgebaut werden. Dafür wird eine Fokusgruppe in der Handwerkskammer München mit ca. 20 Handwerkern verschiedener Branchen durchgeführt. Dabei können diese verschiedene Datenbrillen, wie beispielsweise Google Glass und die Microsoft HoloLens ausprobieren und sich mit der Technologie AR bekannt machen. Anschließend wird über Einsatzmöglichkeiten dieser Technologien diskutiert. Die Ergebnisse davon regten an, das Thema noch genauer mit einer Ethnographie über das Fliesenlegerhandwerk zu beleuchten und so direkt zu sehen, wo Augmented Reality eingesetzt werden kann. Dadurch wurden Ansatzpunkte für eine Applikation gefunden, welche dem Design assistierten. \\
+Diese Anwendung wird anschließend nach der Methode der gestaltungsorientierten Forschung von Peffers \cite{peffers_design_2007} ausgearbeitet. Über fünf Iterationen mit Verbesserungen des Designs und Tests wird das Artefakt verfeinert und besser an die Anforderungen angepasst. Die beiden Hauptfunktionalitäten zur Unterstützung beim Kundengespräch und zum Assistieren bei der Arbeit werden so umgesetzt. Daraus lässt sich ein Szenario bauen, welches in der abschließenden Evaluation von Handwerkern durchlaufen und bewertet werden kann. \\
+Bei diesen finalen Tests werden die Meinungen der Handwerker durch einen Fragebogen und ein anschließendes unstrukturiertes Interview erhoben. Dabei soll geklärt werden, ob Handwerker Potential in der Applikation und in Augmented Reality im allgemeinen für ihre Arbeit sehen. Die gewonnenen Daten werden ausgewertet, qualitativ evaluiert und in einer finalen Diskussion präsentiert.
+
+In KMUs und Handwerksbetrieben werden adaptierte Strukturen nicht gerne verändert. Vor allem Handwerksbetriebe werden oft von Generation zu Generation weitergegeben. Die Prozesse werden von den \enquote{Älteren} übernommen und es wird wie früher gearbeitet, weil: \enquote{Man hat es schon immer so gemacht!}. Dabei wird den negativen Seiten mehr Beachtung geschenkt. Die Einführung neuer Technik bringt vielleicht Vorteile, bringt aber sicher auch neue Kosten mit sich \cite{hateful_six_krcmar}. Im Betrieb gibt es keinen Technik Experten, oder jemanden der Zeit hat sich damit zu beschäftigen. Alles geht weiter wie gehabt. Dadurch gehen jedoch Chancen verloren Kosten einzusparen, oder den Betrieb effizient und nachhaltig wachsen zu lassen. \\
+Augmented Reality bietet neue Möglichkeiten bei Arbeiten zu unterstützen. Momentan wird die Technologie aber selbst von großen Unternehmen wenig genutzt und ihr Potential noch lange nicht voll ausgeschöpft. Die Technik, welche dafür benötigt wird ist noch zu groß und unhandlich. Außerdem ist der Preis für den kommerziellen Gebrauch und vor allem für den Verkauf an Privatpersonen noch viel zu hoch. Wenn allerdings mehr Menschen und Unternehmen Interesse daran zeigen, wird mehr Geld in diese Richtung fließen und sich die Technik rasant verbessern. Was die Technologien in diesem Bereich bereits können ist schon faszinierend. \\
+Virtual Reality (\textbf{VR}) wird bereits von einigen Firmen für \textit{Virtual Prototyping} genutzt, wofür auch AR Potential hätte \cite{lu_virtual_1999}. Dabei wird ein virtueller Prototyp beispielsweise für ein Produkt erstellt und dieses den Steakholdern oder Kunden vorgeführt. Das ermöglicht es Kosten, Material und Arbeitsstunden zu sparen, da kein physikalischer Prototyp angefertigt werden muss. Der virtuelle Prototyp kann präsentiert und betrachtet werden und Änderungen lassen sich sehr schnell hinzufügen, um ihn so ins nächste Teststadion zu bringen. Es muss nicht von vorne begonnen und ein neuer Prototyp gebaut werden. Die Ford Motor Company zum Beispiel nutzte diese Technologie, um die Luftzirkulation unter der Motorhaube ihrer Fahrzeuge zu simulieren und so die verschiedenen Designs zu evaluieren \cite{lu_virtual_1999}. Mit Augmented Reality könnte diese Simulation direkt am Fahrzeug stattfinden. Außerdem wäre es Möglich Prototypen auf dem Konferenztisch zu betrachten und gemeinsam zu manipulieren. Hierbei könnte AR also durchaus mit VR mithalten. \\
+Auch bei der Überprüfung von Spezifikationen kann AR unterstützen. Bei der Umsetzung in ein Produkt werden oft Fehler gemacht. Mit dem SCADA System und der Microsoft HoloLens lässt sich das Ergebnis scannen und automatisch mit der Spezifikation vergleichen \cite{georgel_industrial_2007}. Eventuelle Unstimmigkeiten werden farbig markiert und sind so direkt ersichtlich. \\
+Augmented Reality wird also bereits vielseitig eingesetzt und hat großes Potential den Menschen bei der Arbeit zu unterstützen. Wie aus den Beispielen jedoch hervorgeht, wird dieses hauptsächlich von großen Firmen genutzt, da diese das Know-How und das Kapital besitzen, um diese neue Technologie auszuprobieren und in ihre Arbeitsprozesse zu integrieren. Für KMUs und Handwerksbetriebe müsste es Möglich sein Applikationen so zu entwickeln, dass sie reibungslos in ihre Prozesse eingebaut werden können. Dadurch ließen sich die Betriebe wahrscheinlich leichter überzeugen es tatsächlich zu verwenden.
+
+In Kapitel 2 wird daher eine Literaturrecherche durchgeführt, um den momentanen Stand der Digitalisierung in KMUs und Handwerksbetrieben zu erheben, den Nutzen von technologischen Hilfsmitteln bei der Spezifikationserstellung und Augmented Reality als Visualisierungstool zu zeigen. Alle Punkte werden durch Zuhilfenahme von Beispielen veranschaulicht. \\
+Die Methoden, welche für die Erhebung der Daten verwendet werden, sind in Kapitel 3 erklärt. Dabei wird bearbeitet, wie eine Fokusgruppe und eine Ethnographie durchgeführt werden, wie ein Artefakt für eine Fliesenleger Applikation mit gestaltungsorientierter Forschung von Peffers angefertigt wird und wie der Fragebogen designt wurde, um diese mit Handwerkern zu evaluieren. \\
+Der Ablauf der Fokusgruppe, in welcher 20 Handwerker Datenbrillen testen und über deren Einsatz diskutieren konnten, wird in Kapitel 4 beschrieben. Sie legt den Grundstein für diese Arbeit. \\
+Kapitel 5 beschreibt den Ablauf und die Erkenntnisse der durchgeführten Ethnographie. In dem zweiwöchigen Praktikum wurden Ansatzpunkte zur Unterstützung bei einem Kundengespräch und der Durchführung der Fliesenlegerarbeiten gefunden. \\
+Wie daraus eine Applikation für die Microsoft HoloLens, durch Nutzung gestaltungsorientierter Forschung, entstanden ist, wird in Kapitel 6 gezeigt. Dabei wurde in fünf Iterationen ein benutzerfreundliches AR Werkzeug für Fliesenleger getestet und implementiert. \\
+Kapitel 7 zeigt den Ablauf und die Ergebnisse der Auswertung dieser Applikation im Test mit zehn Handwerkern. Diese spielten damit ein Szenario nach und gaben anschließend ihre Meinung dazu in einem Fragebogen und unstrukturierten Interview wieder. Großteils kann das Feedback als positiv gewertet werden. \\
+In Kapitel 8 werden die Ergebnisse zusammengefasst. Bei Handwerkern ist ein Visualisierungswerkzeug durchaus gefragt und AR zeigt Potential dafür. Abschließend wird ein Ausblick auf weitere Forschung in dieser Richtung gegeben.
